# soda_web

./: Dockerfile  README.md  manage.py  pyproject.toml
blog/: models.py
blog/migrations/: 0001_initial.py  0002_blogpage.py  0003_blogpagegalleryimage.py  0004_author_blogpage_authors.py  0005_blogtagindexpage_blogpagetag_blogpage_tags.py
blog/templates/blog/: blog_index_page.html  blog_page.html
front_end/: blog.css  blog.html
soda_web/: asgi.py  urls.py  wsgi.py
soda_web/settings/: base.py  dev.py
soda_web/soda_web/: settings.py  wsgi.py
soda_web/static/css/: blog_page.css  blog_page_index.css
soda_web/templates/: base.html
sodabackend/: asgi.py  settings.py  urls.py  wsgi.py
