[tool.poetry]
name = "soda-backend"
version = "0.1.0"
description = ""
authors = ["Ben Juntilla <ben@benjuntilla.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.1"
tzdata = "^2023.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
